December 2014 4.8
  - FreeRadius: support dialupAccess and radiusProfileDn
  - Usability improvements
  - LAM Pro:
   -> Self service: added option if referrals should be followed


07.10.2014 4.7.1
  - fixed bugs:
   -> Blank page and "User tried to access entry of type ..." log message when DN suffix does not exactly match case in LDAP


28.09.2014 4.7
  - Nginx webserver support
  - DHCP: support pooling of IP ranges (RFE 107)
  - Personal: support pager attribute (hidden by default)
  - Renamed config/lam.conf_sample to lam.conf.sample and config.cfg_sample to config.cfg.sample
  - LAM Pro:
   -> Password dialog: preset alternate email address with backup email address (RFE 111)


12.06.2014 4.6
  - Unix groups: allow to disable membership management
  - Extended LAM's internal password policies
  - Lamdaemon: move home directory on server if changed
  - Password policy check during typing
  - LAM Pro:
   -> Password self reset and user self registration support to set a header text
   -> Sudo roles: support latest schema
   -> Bind DLZ: automatic PTR management (disabled by default) and better formating of e.g. TTL values


18.03.2014 4.5
  - IMAP: allow dynamic admin user names by replacing wildcards with LDAP attributes
  - Personal: allow to set fields read-only
  - NIS mail aliases can be managed on user page
  - Added option to server profile if referrals should be followed (fixes problems with Samba 4 and AD)
  - Windows user/group: NIS support (msSFU30NisDomain, msSFU30Name)
  - LAM Pro:
   -> Allow to set single account types read-only
   -> Support for organizationalRole entries
   -> Separate IP restriction list for self service
   -> Bind DLZ: support TXT/SRV records
   -> Self Service: added language selection
   -> Password self reset: support backup email address
   -> Custom fields: support help texts
   -> Support for Oracle databases (orclNetService) (RFE 104)
  - fixed bugs:
   -> PDF export for multiple entries does not work (163)